# dotfiles-sidebar

./: README.md  com.ml4w.sidebar.json  com.ml4w.sidebar.json~  com.ml4w.sidebar.pkginst  meson.build  setup.pkginst  setup.sh
data/: com.ml4w.sidebar.desktop.in  com.ml4w.sidebar.gschema.xml  com.ml4w.sidebar.metainfo.xml.in  com.ml4w.sidebar.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: dotfiles-sidebar.gresource.xml  dotfiles-sidebar.in  main.py  meson.build  window.py  window.ui
